# s-i

./: .cvsignore  .mrconfig  README
anna/: .cvsignore  Makefile  TODO  anna.c  anna.h  fake-retriever  packages.h  retriever.c  util.c
doc/: INSTALLATION-HOWTO  INSTALLATION-HOWTO.el  ISSUES  README  TODO  apt-install.txt  armbooting.txt  boot-parameters.txt  brltty.txt  bterm.txt  busybox-applets.txt  cheatsheet.txt  codingstyle.txt  design.txt  diagram.dia  draft-release-announcement  goals.txt  hardware-detection.txt  i18n.txt  installation-reports.txt  libdi-changes.txt  menu-item-numbers.txt  modules.txt  partitioning.txt  release-announcement.txt  retriever.txt  root.txt  scenarios.txt  translations.txt  (+3 more)
libdebian-installer/: .cvsignore  Makefile  Makefile.am  README  configure.ac  debian-installer.c  debian-installer.h  libdebian-installer-extra.pc.in  libdebian-installer.pc.in
libdebian-installer/debian/: .cvsignore  changelog  control  copyright  libdebian-installer1.postinst  libdebian-installer4-dev.install  rules  shlibs
libdebian-installer/doc/: Doxyfile  Doxyfile.in  Makefile.am
libdebian-installer/include/: debian-installer.h
libdebian-installer/include/debian-installer/: .cvsignore  Makefile.am  exec.h  hash.h  list.h  log.h  macros.h  mem.h  mem_chunk.h  package.h  package_internal.h  packages.h  packages_internal.h  parser.h  parser_rfc822.h  release.h  slist.h  slist_internal.h  string.h  types.h  utils.h
libdebian-installer/include/debian-installer/system/: Makefile.am  devfs.h  dpkg.h  dpkg_internal.h  packages.h  prebaseconfig.h  utils.h
libdebian-installer/src/: Makefile.am  exec.c  hash.c  libdebian-installer-extra.ver  libdebian-installer.ver  list.c  log.c  mem.c  mem_chunk.c  package.c  package_parser.c  packages.c  packages_parser.c  parser.c  parser_rfc822.c  release.c  slist.c  string.c  utils.c
libdebian-installer/src/system/: Makefile.am  devfs.c  dpkg.c  packages.c  prebaseconfig.c  utils.c
tools/autopartkit/: .cvsignore  AUTHORS  HACKING  Makefile  Makefile.am  README  Server+LTSP-server.table  Server+Workstation.table  Server.table  TODO  Workstation+LTSP-server.table  Workstation.table  acinclude.m4  autopartkit-gettable  autopartkit.c  autopartkit.h  choosetable-test.c  choosetable.c  configure.ac  default.table  distribute-test.c  distribute.c  dummydebconfclient.c  dummydebconfclient.h  dummylog.c  dumptable.c  evaluator.c  loadpartitions.c  lvm.c  lvm_test.c  makepath.c  makepath_test.c  mapdevfs.c  parted-compat.h  test.table
tools/autopartkit/autopartkit.d/: 00default  10skolelinux  Makefile.am
tools/autopartkit/debian/: .cvsignore  changelog  control  copyright  menutest  postinst  rules  templates  templates.pt_BR
tools/autopartkit/debian/po/: ar.po  bg.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  lt.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  se.po  sk.po  sl.po  sv.po  templates.pot  tr.po  uk.po  zh_CN.po  zh_TW.po
tools/cdebconf/: .cvsignore  Makefile  configure  configure.in  globalmakeflags  globalmakeflags.in
tools/cdebconf/debian/: .cvsignore  TODO  cdebconf-priority.postinst  cdebconf-priority.templates  cdebconf-slang-udeb.templates  cdebconf-text-udeb.templates  cdebconf-udeb.dirs  cdebconf-udeb.postinst  cdebconf-udeb.templates  cdebconf.dirs  cdebconf.postrm  cdebconf.preinst  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local
tools/cdebconf/debian/po/: POTFILES.in  ar.po  bg.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  es.po  fa.po  fi.po  fr.po  hu.po  it.po  ja.po  ko.po  lt.po  lv.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sv.po  templates.pot  tr.po  uk.po  zh_CN.po  zh_TW.po
tools/cdebconf/doc/: TODO  coding.txt  confmodule.txt  design.txt  modules.txt  objects.dia  progress.txt  testing.txt
tools/cdebconf/man/: Makefile.in  dpkg-preconfigure.pod  dpkg-reconfigure.pod
tools/cdebconf/src/: .cvsignore  Makefile  Makefile.in  cdebconf.conf  cdebconf.conf-dist  cdebconf.conf-dist.in  commands.c  commands.h  common.h  config.h  config.h.in  configuration.c  configuration.h  confmodule.c  confmodule.h  database.c  database.h  debconf-communicate.c  debconf-convertdb.c  debconf-copydb.c  debconf-dumpdb.c  debconf-loadtemplate.c  debconf.c  debconf.conf  debconf.conf-dist  debconfclient.c  debconfclient.h  debug.c  debug.h  dpkg-reconfigure.c  frontend.c  frontend.h  loadtemplate.c  makefile.in  priority.c  priority.h  question.c  question.h  rfc822.h  strutl.c  (+3 more)
tools/cdebconf/src/client/: confmodule
tools/cdebconf/src/modules/: Makefile
tools/cdebconf/src/modules/db/: Makefile  modules.mak  textdb.c  textdb.h
tools/cdebconf/src/modules/db/mysql/: Makefile  create.sql  mysql.c  mysql.h
tools/cdebconf/src/modules/db/perldb/: Makefile  perldb.c
tools/cdebconf/src/modules/db/rfc822db/: Makefile  rfc822db.c  rfc822db.h
tools/cdebconf/src/modules/db/rfc822db/table/: Makefile  NEWS  README  table.c  table.h  table_loc.h  table_t.c  table_util.c
tools/cdebconf/src/modules/db/stack/: stack.c  stack.h
tools/cdebconf/src/modules/db/textdb/: Makefile  textdb.c
tools/cdebconf/src/modules/frontend/: Makefile  modules.mak  ncurses.c  ncurses.h  slang.c  text.c
tools/cdebconf/src/modules/frontend/bogl/: Makefile  bogl.c
tools/cdebconf/src/modules/frontend/corba/: .cvsignore  Makefile  corba.c  dcf-text.c  dcf-text.gnorba  dcf-textimpl.c  dcf.idl
tools/cdebconf/src/modules/frontend/gtk/: Makefile  cdebconf_gtk.h  gtk.c
tools/cdebconf/src/modules/frontend/ncurses/: Makefile  ncurses.c
tools/cdebconf/src/modules/frontend/newt/: Makefile  newt.c
tools/cdebconf/src/modules/frontend/slang/: Makefile  slang.c  slang_fe.h
tools/cdebconf/src/modules/frontend/text/: Makefile  text.c
tools/cdebconf/src/test/: .cvsignore  Makefile  apt.conf  backup.config  configtest  dbtest  dbtest.c  debconf.conf  longselect.config  progress.config  progress.templates  test.conf  test.config  test.templates
(+5667 files in other folders)
