SUBDIRS = system

realincludedir = $(includedir)/debian-installer

realinclude_HEADERS = \
	exec.h \
	hash.h \
	list.h \
	log.h \
	macros.h \
	mem.h \
	package.h \
	packages.h \
	parser.h \
	parser_rfc822.h \
	release.h \
	slist.h \
	string.h \
	types.h \
	utils.h

noinst_HEADERS = \
	package_internal.h \
	packages_internal.h

